<resources>
    <string name="app_name">AndroidWidget</string>
    <string name="app_desc">Android 自定义控件合集</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="about_me">About Me</string>

    <string name="author">Airsaid</string>
    <string name="author_link">https://github.com/airsaid</string>

    <string name="set_progress">setProgress</string>
</resources>